tests/specs/node/error_stack_internal_frames/thrown.out
error: Uncaught Error: ENOENT: no such file or directory, open '/non/existent/file'
  readFileSync("/non/existent/file");
  ^
    at readFileSync (ext:deno_node/fs.ts:[WILDCARD])
    at [WILDCARD]thrown.ts:5:3
    at processTicksAndRejections (ext:core/01_core.js:[WILDCARD])
