tests/specs/node/error_stack_internal_frames/thrown.ts
import process from "node:process";
import { readFileSync } from "node:fs";

process.nextTick(() => {
  readFileSync("/non/existent/file");
});
